# 3-Semestre-BCC-IME-USP

Desafios/: L6-E.cpp  teste.cpp
Desafios/L0/: L0-C.cpp  L0-D.cpp  L0-F.cpp
Desafios/L1 e L2/: L1-C.cpp  L2-F.cpp  L2-b.cpp  L2-c.cpp  L2-d.cpp  L2-stl.cpp  L2.cpp
Desafios/L10/: 10-B  10-B.cpp  10-C  10-C.cpp  10-D  10-D.cpp  10-E  10-E.cpp  L10-A  L10-A.cpp
Desafios/L3/: L3-A.cpp  L3-C.cpp  L3-D.cpp  L3-E.cpp  L3-F  L3-F.cpp
Desafios/L4/: L4-A.cpp  L4-B.cpp  L4-C.cpp  L4-D.cpp  L4-E.cpp  L4-F.cpp
Desafios/L5/: L5-A  L5-A.cpp  L5-B  L5-B.cpp  L5-C  L5-C.cpp  L5-D  L5-D.cpp  L5-E  L5-E.cpp
Desafios/L6/: L6-A  L6-A.cpp  L6-B.cpp  L6-C  L6-C.cpp  L6-D  L6-D.cpp  L6-E  L6-E.cpp
Desafios/L7/: L7-A  L7-A.cpp  L7-B.cpp  L7-C  L7-C.cpp  L7-D  L7-E  L7-E.cpp
Desafios/L9/: L8-A  L8-B  L9-A  L9-A.cpp  L9-B  L9-B.cpp  L9-D  L9-D.cpp  (+2 more)
ED2/: EP0  config  config.bak  programa
ED2/EP1/: A23  A23teste  A23teste.cpp  ARBteste.cpp  CMakeLists.txt  EP  Ep1-ABB  Ep1-ABB.cpp  Ep1-VetorOrdenado  Ep1-VetorOrdenado.cpp  TESTE  TESTE.cpp  VO  VO-main.cpp  a  ab  bsh.sh  bsh2.sh  ep1  ep1TR  ep1TR.cpp  lixo.txt  texto.txt  texto2.txt  ttTree.h
ED2/EP1/EP_EduardoFigueredoPacheco/: A23.cpp  ABB.cpp  ARB.cpp  EP.cpp  TR.cpp  VO.cpp
ED2/EP1/bruno/: A23.cpp  A23.h  A23teste.cpp
ED2/EP1/lixo/EP_EduardoFigueredoPacheco/: A23.h  ABB.h  ARB.h  EP  EP.cpp  EP.h  TR.h  VO.h
LabNum/: .texto.txt.swp  .textoo.txt.swp  EP1  EP1(x^5-...)_EduardoFiguerdoPcheco.c  EP1(x^9-3)EduardoFigueredoPacheco.c  EP1-EduardoFigueredoPacheco.c  output.txt  pfixo  pfixo.c  teste  teste.c  teste2  teste3
(+80 files in other folders)
